Wed Apr 18 02:12:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* README: Add comment about using gmcs and mcs.

Wed Apr 18 02:01:43 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Prefer gmcs to mcs when looking for a C# compiler
	  since gmcs is the newer compiler targetting the 2.0 runtime.

Wed Apr 18 01:12:39 BST 2007  Olly Betts <olly@survex.com>

	* csharp/util.i: Remove renaming exception for get_term - the
	  automatic naming will handle that correctly.

Wed Apr 18 00:29:57 BST 2007  Olly Betts <olly@survex.com>

	* java/native/Enquire.cc,java/native/Stem.cc: Update to use new
	  C++ replacements for deprecated methods.  The Java wrappers
	  still provide the old deprecated names for now though.
	* ruby/smoketest.rb: For now, use @stem.call("foo").
	* ruby/util.i,xapian.i: Remove wrappers for deprecated methods and
	  functions.

Wed Apr 18 00:15:40 BST 2007  Olly Betts <olly@survex.com>

	* python/Makefile.am: Need to distribute testsuite.py.

Tue Apr 17 23:23:44 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/util.i: add __str__ methods as aliases for the
	  get_description() methods, and deprecate the get_description()
	  methods.

Tue Apr 17 22:41:40 BST 2007  Olly Betts <olly@survex.com>

	* python/docs/examples/simpleexpand.py: Replace use of deprecated
	  RSet::is_empty() with RSet::empty().

Tue Apr 17 21:02:52 BST 2007  Olly Betts <olly@survex.com>

	* php/util.i,xapian.i: We need to keep is_empty() for PHP as empty()
	  clashes with a reserved word!  Refactor to use %rename in php/util.i
	  instead of %ignore on empty() and a special is_empty() wrapper in
	  xapian.i.
	* php/docs/bindings.html: Document renaming of empty() to
	  is_empty() and clone() to clone_object().

Tue Apr 17 19:57:03 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Fix comment typo.

Tue Apr 17 19:20:42 BST 2007  Richard Boulton <richard@lemurconsulting.com>
