@@ -1,3 +1,15 @@
+Wed Apr 18 02:34:53 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* python/extra.i: Improve various documentation comments.  Allow
+	  _SequenceMixIn to have default values for some parameters,
+	  instead of doing a lookup, to allow termlists and posting lists
+	  to return the fake values returned by the old sequence API.  Add
+	  termlist iterators, and link them into the Enquire.matching_terms
+	  method.
+	* python/pythontest.py: Add a check that xapian exceptions have
+	  Exception as a base class.  Also, add a test of the new
+	  Enquire.matching_terms term iterators.
+
 Wed Apr 18 02:12:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* README: Add comment about using gmcs and mcs.
